tulip: overlay: Enable adaptive sleep
* This allows the use of Screen Attention

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -424,5 +424,8 @@
          the blur effect where it isn't worth the performance hit.
          As of Honeycomb, blurring is not supported anymore. -->
     <bool name="config_sf_slowBlur">false</bool>
+	
+	<!-- Flag indicating whether we should enable the adaptive sleep.-->
+	<bool name="config_adaptive_sleep_available">true</bool>
 
 </resources>
